Added user avatars to profile page and comments, intified COMMENTS_PER_PAGE variable

--- a/app/templates/_comments.html
+++ b/app/templates/_comments.html
@@ -6,6 +6,7 @@
     {% if moderate or not comment.disabled %}
         <h4>
             {% if comment.body_html %}
+            <img src="{{ avatar }}">
             {{ comment.author.username }} -
             {{ moment(comment.timestamp).fromNow() }}
             <br>
