--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -9,6 +9,9 @@
     <h2>User Profile</h2>
 </div>
 <div id="page-body">
+    <div class="control-group">
+        <img src="{{ avatar }}">
+    </div>
     <h4>Username: </h4>
         <div class="control-group">
             <form name="input" class="form-horizontal" id="changeUsername" method="post">
