--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -52,6 +52,9 @@
         <ul class="dropdown-menu">
             <li><a href="{{ url_for('main.mis') }}">MIS</a></li>
             <li><a href="{{ url_for('main.lmt') }}">LMT</a></li>
+            <li><a href="http://www.archives.nyc/">Archives</a></li>
+            <li><a href="www.nyc.gov/records">Records</a></li>
+            <li><a href="http://nycma.lunaimaging.com/">NYCMA</a></li>
         </ul>
         <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Employee Info<span class="caret"></span></a>
         <ul class="dropdown-menu">
