--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,7 +10,7 @@
         <form name="input" class="form-horizontal" id="searchTags" method="post">
             <div class="control-group">
                 <div class="ui action input">
-                    <input name="search_term" type="text" placeholder="Search...">
+                    <input name="search_term" type="text" placeholder="Search..." style="font-family: Georgia, serif;">
                     <select name="select_search_option" class="ui compact selection dropdown">
                         <option value="all">All</option>
                         <option value="title">Title</option>
@@ -19,7 +19,7 @@
                 </div>
             </div>
             <div class="control-group">
-            <select name="select_tags" class="ui fluid search dropdown" multiple="" >
+            <select name="select_tags" class="ui fluid search dropdown" multiple="">
                 <option value="">Tag Filter</option>
                 {% for tag in allTags %}
                 <option value="{{ tag.name }}">{{ tag.name }}</option>
