Updated search box description

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,7 +10,7 @@
         <form name="input" class="form-horizontal" id="searchTags" method="post">
             <div class="control-group">
                 <div class="ui action input">
-                    <input name="search_term" type="text" placeholder="Search..." style="font-family: Georgia, serif;">
+                    <input name="search_term" type="text" placeholder="Search" style="font-family: Georgia, serif;">
                     <select name="select_search_option" class="ui compact selection dropdown">
                         <option value="all">All</option>
                         <option value="title">Title</option>
