--- a/app/templates/_comments.html
+++ b/app/templates/_comments.html
@@ -9,7 +9,7 @@
     {% if moderate or not comment.disabled %}
         <h4>
         {% if comment.body_html %}
-            <img src="{{ avatar }}">
+            <img src="{{ url_for('static', filename=avatar)}}" height="35" width="35">
             {{ comment.author.username }} -
             {{ moment(comment.timestamp).fromNow() }}
             <br>
