--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -11,7 +11,7 @@
 <div id="page-body">
     <h4>Profile Picture:</h4>
     <div class="control-group">
-        <img src="{{ url_for('static', filename=avatar)}}">
+        <img src="{{ url_for('static', filename=avatar)}}" height="200" width="200">
         <form name="input" class="form-horizontal" enctype="multipart/form-data" method="post">
         <input type="file" name="profile_picture" accept="image/*">
         <div id="requestButton" class="control-group">
