Uploaded avatar files will replace old avatars by deleting the old file

--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -9,7 +9,7 @@
     <h2>User Profile</h2>
 </div>
 <div id="page-body">
-    <h4>Profile Picture:</h4>
+    <h4>Avatar:</h4>
     <div class="control-group">
         <img src="{{ url_for('static', filename=avatar)}}" height="200" width="200">
         <form name="input" class="form-horizontal" enctype="multipart/form-data" method="post">
