--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -162,6 +162,10 @@ li a:hover, .page-footer > h3 > a {
 	width: 100%;
 }
 
+#page-body > h4 > section {
+	padding-top: 100px;
+}
+
 div ul li {
 	font-size: 20px;
 	list-style-type: none;
@@ -169,6 +173,10 @@ div ul li {
 
 div > h2 {
 	font-size: 40px;
+	margin-left: 30px;
+}
+
+div > h3 {
 	margin-left: 30px;
 }
 
