Updated mis html file

--- a/app/templates/mis.html
+++ b/app/templates/mis.html
@@ -24,6 +24,7 @@
 	* <a href="#keyboard">Keyboard</a><br>
 	* <a href="#control_alt_delete">Control-Alt-Delete</a><br>
 	* <a href="#rebooting">Rebooting</a><br>
+	* <a href="#contact">Contact</a><br>
 	<br>
 
 	Don't panic.<br>
@@ -41,18 +42,14 @@
 	If you're using a power strip or a surge protector, make sure it's on and that it works. Remember that a surge protector may not be working because it is designed to self-destruct. When an electric jolt is too much, your surge protector takes the hit saving your more expensive hardware from the voltage.<br>
 	Try plugging something else directly into the electrical outlet to make sure there isn't a power problem.<br>
 	Check to see if your monitor is on.  Sounds silly, but it has solved my own problem more than once.<br>
-	<a href="#top">
-	Back to Top
-	</a><br>
+	<a href="#top">Back to Top</a>
 
 	<section id="network_problems"></section>
 	Network Problems – Can’t get on to the network or the Internet?<br>
 	1. Check to see if anyone else around you is having a similar problem. If so, there may be a service outage affecting a wider area<br>
 	2. Check to make sure the network cable is connected to both the computer and the wall or modem.<br>
 	3. Check where the network cable connection is made to the back of the computer, you should see a little green light right where the cable connects.  If the light isn’t on or flashing, then you are not getting a signal to the computer.  If rebooting doesn’t fix it, contact the Help Desk or your ISP.<br>
-	<a href="#top">
-	Back to Top
-	</a><br>
+	<a href="#top">Back to Top</a>
 
 	<section id="error_messages"></section>
 	Error Messages – Write them down.<br>
@@ -64,9 +61,7 @@
 	Any peripherals been added or removed recently (such as a printer or external Memory Card reader?)<br>
 	Has anyone else been using your computer recently?<br>
 	Have downloaded anything off the Web?  File sharing and free MP3’s are an easy way to get a virus on your machine.<br>
-	<a href="#top">
-	Back to Top
-	</a><br>
+	<a href="#top">Back to Top</a>
 
 	<section id="frozen"></section>
 	Frozen – The computer is on but…<br>
@@ -75,38 +70,28 @@
 	<br>
 	Pressing Alt + F4<br>
 	If a software program stops working or freezes up, try pressing the ALT+F4 keys to close the window that you’re currently working in.  This can shut down a frozen window and bring the computer back to life.  If the keyboard is frozen as well, you’ll have to reboot.<br>
-	<a href="#top">
-	Back to Top
-	</a><br>
+	<a href="#top">Back to Top</a>
 
 	<section id="blue_screen"></section>
 	Blue Screen – The “Blue Screen” has appeared.<br>
 	The dreaded “Blue Screen of Death”. There’s not a lot to be done except to reboot the machine.  If it keeps occurring, this is an indication of a major problem with the computer.<br>
-	<a href="#top">
-	Back to Top
-	</a><br>
+	<a href="#top">Back to Top</a>
 
 	<section id="no_sound"></section>
 	No Sound – The computer is on, but there is no sound.<br>
 	Is there a speaker icon next to the clock on the taskbar? (It’s in the lower right side of the screen)  If you can find it, double click the speaker icon to bring up the audio controls for the computer.  See if any of the volume controls have been muted or turned all the way down.  Uncheck any Mute boxes that are selected.<br>
-	<a href="#top">
-	Back to Top
-	</a><br>
+	<a href="#top">Back to Top</a>
 
 	<section id="keyboard"></section>
 	Keyboard – The computer is on, but the keyboard doesn’t work<br>
 	Swap the keyboard or try plugging the keyboard into another computer. If it doesn't work on the other computer, there is likely something wrong with the keyboard. If it does work on the other computer, there is likely something wrong on the computer or the connection to the computer.<br>
-	<a href="#top">
-	Back to Top
-	</a><br>
+	<a href="#top">Back to Top</a>
 
 	<section id="control_alt_delete"></section>
 	CTRL-ALT-DEL<br>
 	When you press the Ctrl-Alt-Delete buttons together, you will bring up a control panel where you can select “Task Manager” and see if any of the programs are shown as “not responding”.   You may be able to shut down the offending program from there.<br>
 	If you can’t get to this screen, you’ll have to reboot.<br>
-	<a href="#top">
-	Back to Top
-	</a><br>
+	<a href="#top">Back to Top</a>
 
 	<section id="rebooting"></section>
 	Rebooting – Rebooting can do wonders.<br>
@@ -114,9 +99,11 @@
 	A simple reboot may clear up the problem. Go to the Start Menu and select Shutdown. Didn't work? It's time to try a forced reboot — with, unfortunately, no way to save your work — by pressing the keys CTRL-ALT-DEL simultaneously twice in a row.<br>
 	If that didn't work, you have no choice: you have to turn the computer off manually with the power switch. Hold the power button down (for  about 5 -10 seconds) and the computer will shut down.  Wait at least 10 seconds for the hard drive to stop spinning and then restart the machine.<br>
 	If the computer starts up, start the applications you were using when the crash occurred. Some programs, like Microsoft Word, make timed backups of your work and may bring up recovered files. If the program notifies you that there is a “recovered document” save the file under a different name and compare them to your previously saved files.<br>
-	<a href="#top">
-	Back to Top
-	</a><br>
+	<a href="#top">Back to Top</a>
+
+	<section id="contact"></section>Stumped? DOITT Team Help Desk is ready to assist you with computer problems.<br>
+	718-403-8888 or doitthelpdesk@doitt.nyc.gov<br>
+	<a href="#top">Back to Top</a>
 
 	</h4>
 </div>
