Fixed base.html file format

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,30 +15,30 @@
 
 {% block navbar %}
 <div class="nav" role="navigation">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a id="navbar-brand" href="{{ url_for('main.index') }}">Intranet</a>
-            <div id="desc"><h12>NYC DORIS</h12></div>
-        </div>
-        <div id="nav-topright">
-            <ul>
-                {% if current_user.is_authenticated() %}
-                <li><a href="{{ url_for('auth.logout') }}">Logout</a></li>
-                {% else %}
-                <li><a href="{{ url_for('auth.login') }}">Login</a></li>
-                {% endif %}
-            </ul>
+    <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+        <a id="navbar-brand" href="{{ url_for('main.index') }}">Intranet</a>
+        <div id="desc"><h12>NYC DORIS</h12></div>
+    </div>
+    <div id="nav-topright">
+        <ul>
             {% if current_user.is_authenticated() %}
-            <a href="{{ url_for('main.profile') }}">
-                <div id="showuser"><h12>{{ current_user.username }}</h12></div>
-            </a>
+            <li><a href="{{ url_for('auth.logout') }}">Logout</a></li>
+            {% else %}
+            <li><a href="{{ url_for('auth.login') }}">Login</a></li>
             {% endif %}
-        </div>
+        </ul>
+        {% if current_user.is_authenticated() %}
+        <a href="{{ url_for('main.profile') }}">
+            <div id="showuser"><h12>{{ current_user.username }}</h12></div>
+        </a>
+        {% endif %}
+    </div>
 </div>
 
 <div class="aside">
@@ -48,29 +48,35 @@
         <li><a href="https://prod.citytime.nycnet/">CityTime</a></li>
         <li><a href="http://timeclock.records.nycnet/timeclock/">TimeClock</a></li>
         <li><a href="https://hrb.nycaps.nycnet/">NYCAPS</a></li>
-        <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Departments<span class="caret"></span></a>
-        <ul class="dropdown-menu">
-            <li><a href="{{ url_for('main.mis') }}">MIS</a></li>
-            <li><a href="{{ url_for('main.lmt') }}">LMT</a></li>
-            <li><a href="http://www.archives.nyc/">Archives</a></li>
-            <li><a href="www.nyc.gov/records">Records</a></li>
-            <li><a href="http://nycma.lunaimaging.com/">NYCMA</a></li>
-        </ul>
-        <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Employee Info<span class="caret"></span></a>
-        <ul class="dropdown-menu">
-            <li><a href="http://www1.nyc.gov/site/olr/index.page/">OLR</a></li>
-            <li><a href="https://www.nycers.org/(S(m4z1oy554pem3oudryveam55))/index.aspx">NYCERS</a></li>
-            <li><a href="http://www.nyc.gov/html/dcas/html/employees/psbhome.shtml/">PSBs</a></li>
-            <li><a href="{{ url_for('main.agencypolicies') }}">Agency Policies</a></li>
-        </ul>
-        <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Social Media<span class="caret"></span></a>
-        <ul class="dropdown-menu">
-            <li><a href="https://www.facebook.com/nycrecords?fref=ts/">Facebook</a></li>
-            <li><a href="https://twitter.com/nycrecords/">Twitter</a></li>
-            <li><a href="https://www.youtube.com/user/NYCDeptofRecords/">YouTube</a></li>
-            <li><a href="https://instagram.com/explore/locations/6126741/">Instagram</a></li>
-            <li><a href="http://nycrecords.tumblr.com/">Tumblr</a></li>
-        </ul>
+        <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Departments<span class="caret"></span></a>
+            <ul class="dropdown-menu">
+                <li><a href="{{ url_for('main.mis') }}">MIS</a></li>
+                <li><a href="{{ url_for('main.lmt') }}">LMT</a></li>
+                <li><a href="http://www.archives.nyc/">Archives</a></li>
+                <li><a href="www.nyc.gov/records">Records</a></li>
+                <li><a href="http://nycma.lunaimaging.com/">NYCMA</a></li>
+            </ul>
+        </li>
+        <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Employee Info<span class="caret"></span></a>
+            <ul class="dropdown-menu">
+                <li><a href="http://www1.nyc.gov/site/olr/index.page/">OLR</a></li>
+                <li><a href="https://www.nycers.org/(S(m4z1oy554pem3oudryveam55))/index.aspx">NYCERS</a></li>
+                <li><a href="http://www.nyc.gov/html/dcas/html/employees/psbhome.shtml/">PSBs</a></li>
+                <li><a href="{{ url_for('main.agencypolicies') }}">Agency Policies</a></li>
+            </ul>
+        </li>
+        <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Social Media<span class="caret"></span></a>
+            <ul class="dropdown-menu">
+                <li><a href="https://www.facebook.com/nycrecords?fref=ts/">Facebook</a></li>
+                <li><a href="https://twitter.com/nycrecords/">Twitter</a></li>
+                <li><a href="https://www.youtube.com/user/NYCDeptofRecords/">YouTube</a></li>
+                <li><a href="https://instagram.com/explore/locations/6126741/">Instagram</a></li>
+                <li><a href="http://nycrecords.tumblr.com/">Tumblr</a></li>
+            </ul>
+        </li>
     </ul>
 </div>
 {% endblock %}
