Added eeo page to employee info dropdown

--- a/app/templates/mis.html
+++ b/app/templates/mis.html
@@ -7,13 +7,12 @@
 <section id="top"></section>
 
 <div class="page-header">
-    <h2>MIS Information</h2>
+    <h2>Management and Information Systems</h2>
 </div>
 
 <div id="page-body">
-	<h4>Basic Computer Trouble Shooting Guide</h4>
+	<h4>Basic Computer Trouble Shooting Guide
 
-	<h4>
 	Index:<br>
 	* <a href="#wont_start">Won’t Start</a><br>
 	* <a href="#network_problems">Network Problems</a><br>
