--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -61,6 +61,7 @@
         <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Employee Info<span class="caret"></span></a>
             <ul class="dropdown-menu">
+                <li><a href="{{ url_for('main.eeo') }}">EEO</a></li>
                 <li><a href="http://www1.nyc.gov/site/olr/index.page/">OLR</a></li>
                 <li><a href="https://www.nycers.org/(S(m4z1oy554pem3oudryveam55))/index.aspx">NYCERS</a></li>
                 <li><a href="http://www.nyc.gov/html/dcas/html/employees/psbhome.shtml/">PSBs</a></li>
@@ -99,6 +100,7 @@
 <script type="text/javascript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="https://code.jquery.com/jquery.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
+
 {{ super() }}
 {{ moment.include_moment() }}
 {% endblock %}
