--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -4,6 +4,13 @@
 
 {% block title %}Intranet - Post{% endblock %}
 
+{% block head %}
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js" type="text/javascript" ></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
+<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
+{{ super() }}
+{% endblock %}
+
 {% block page_content %}
 <div id="moderate-comments">
 	{% if current_user.can(Permission.ADMINISTER) or current_user == post.author %}
