--- a/app/templates/tagged_posts.html
+++ b/app/templates/tagged_posts.html
@@ -4,6 +4,13 @@
 
 {% block title %}Intranet - Results{% endblock %}
 
+{% block head %}
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js" type="text/javascript" ></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
+<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
+{{ super() }}
+{% endblock %}
+
 {% block page_content %}
 <div class="page-header" style="margin-left: 10px;">
     <h2>Search Results</h2>
