Added lmt info, added icons for social media in sidebar

--- a/app/templates/lmt.html
+++ b/app/templates/lmt.html
@@ -14,4 +14,23 @@
 <div class="page-header">
     <h2>Labor Management Team</h2>
 </div>
+
+<div id="page-body">
+	<h4><b>Meeting Minutes</b>
+	<br><br>
+	- <a href="{{ url_for('static', filename='files/LMT_12_17_2015.pdf') }}">12-17-2015</a><br>
+	- <a href="{{ url_for('static', filename='files/LMT_10_15_2015.pdf') }}">10-15-2015</a><br>
+	- <a href="{{ url_for('static', filename='files/LMT_09_17_2015.pdf') }}">09-17-2015</a><br>
+	- <a href="{{ url_for('static', filename='files/LMT_07_16_2015.pdf') }}">07-16-2015</a><br>
+	- <a href="{{ url_for('static', filename='files/LMT_06_18_2015.pdf') }}">06-18-2015</a><br>
+	- <a href="{{ url_for('static', filename='files/LMT_05_20_2015.pdf') }}">05-20-2015</a><br>
+	- <a href="{{ url_for('static', filename='files/LMT_04_16_2015.pdf') }}">04-16-2015</a><br>
+	- <a href="{{ url_for('static', filename='files/LMT_03_19_2015.pdf') }}">03-19-2015</a><br>
+	- <a href="{{ url_for('static', filename='files/LMT_02_19_2015.pdf') }}">02-19-2015</a><br>
+	- <a href="{{ url_for('static', filename='files/LMT_01_15_2015.pdf') }}">01-15-2015</a><br>
+	- <a href="{{ url_for('static', filename='files/LMT_12_18_2014.pdf') }}">12-18-2014</a><br>
+	- <a href="{{ url_for('static', filename='files/LMT_11_20_2014.pdf') }}">11-20-2014</a><br>
+	- <a href="{{ url_for('static', filename='files/LMT_10_01_2014.pdf') }}">10-01-2014</a><br>
+	</h4>
+</div>
 {% endblock %}
