--- a/app/templates/mis.html
+++ b/app/templates/mis.html
@@ -18,22 +18,23 @@
 </div>
 
 <div id="page-body">
-	<h4>Basic Computer Trouble Shooting Guide
+	<h4><b>Basic Computer Trouble Shooting Guide</b>
+	<br><br>
 
 	Index:<br>
-	* <a href="#wont_start">Won’t Start</a><br>
-	* <a href="#network_problems">Network Problems</a><br>
-	* <a href="#error_messages">Error Messages</a><br>
-	* <a href="#frozen">Frozen</a><br>
-	* <a href="#blue_screen">Blue Screen</a><br>
-	* <a href="#no_sound">No Sound</a><br>
-	* <a href="#keyboard">Keyboard</a><br>
-	* <a href="#control_alt_delete">Control-Alt-Delete</a><br>
-	* <a href="#rebooting">Rebooting</a><br>
-	* <a href="#contact">Contact</a><br>
+	- <a href="#wont_start">Won’t Start</a><br>
+	- <a href="#network_problems">Network Problems</a><br>
+	- <a href="#error_messages">Error Messages</a><br>
+	- <a href="#frozen">Frozen</a><br>
+	- <a href="#blue_screen">Blue Screen</a><br>
+	- <a href="#no_sound">No Sound</a><br>
+	- <a href="#keyboard">Keyboard</a><br>
+	- <a href="#control_alt_delete">Control-Alt-Delete</a><br>
+	- <a href="#rebooting">Rebooting</a><br>
+	- <a href="#contact">Contact</a><br>
 	<br>
 
-	Don't panic.<br>
+	<b>Don't panic.</b><br>
 	Relax.  Take a breath.<br>
 	Many computer problems appear more serious than they really are.<br>
 	It may look like the computer has crashed and all your data is lost forever. But there are a host of problems that keep you from reaching your data or the network that can be fixed, sometimes in a matter of minutes.<br>
@@ -42,7 +43,7 @@
 	<br>
 
 	<section id="wont_start"></section>
-	Won't Start – Make sure there really is a problem.<br>
+	<b>Won't Start</b> – Make sure there really is a problem.<br>
 	Can't start your computer? Check the basics.<br>
 	Examine the cables, connectors, and power cords to make sure they're plugged in securely.  Often times a loose cable or connector (power, network, keyboard, mouse, speaker, monitor cable, etc.) is the cause of the problem.<br>
 	If you're using a power strip or a surge protector, make sure it's on and that it works. Remember that a surge protector may not be working because it is designed to self-destruct. When an electric jolt is too much, your surge protector takes the hit saving your more expensive hardware from the voltage.<br>
@@ -51,14 +52,14 @@
 	<a href="#top">Back to Top</a>
 
 	<section id="network_problems"></section>
-	Network Problems – Can’t get on to the network or the Internet?<br>
+	<b>Network Problems</b> – Can’t get on to the network or the Internet?<br>
 	1. Check to see if anyone else around you is having a similar problem. If so, there may be a service outage affecting a wider area<br>
 	2. Check to make sure the network cable is connected to both the computer and the wall or modem.<br>
 	3. Check where the network cable connection is made to the back of the computer, you should see a little green light right where the cable connects.  If the light isn’t on or flashing, then you are not getting a signal to the computer.  If rebooting doesn’t fix it, contact the Help Desk or your ISP.<br>
 	<a href="#top">Back to Top</a>
 
 	<section id="error_messages"></section>
-	Error Messages – Write them down.<br>
+	<b>Error Messages</b> – Write them down.<br>
 	What tipped you off to the problem? Sometimes it's an error code or message displayed on screen. Be sure to write it down — it may describe the problem and how serious it is. Be sure to document the exact wording of any error messages.  This can make the job of the Help Desk much faster.<br>
 	Other times you get no warning — everything just freezes. Message or no message, be sure note what was going on when the problem occurred. Were you starting your computer? Were you on the Windows Desktop? Were you in a particular application? Surfing the Web?<br>
 	Think about what changed recently on your computer.<br>
@@ -70,7 +71,7 @@
 	<a href="#top">Back to Top</a>
 
 	<section id="frozen"></section>
-	Frozen – The computer is on but…<br>
+	<b>Frozen</b> – The computer is on but…<br>
 	Everything on the screen is frozen and the keyboard and mouse are not responding.<br>
 	Try tapping on the Num Lock key.  It’s located on the right-hand side of the keyboard above the number 7. While tapping the Num Lock key, notice whether or not the Num Lock light goes on and off. If it doesn’t, the computer is completely locked up.  You’ll have to REBOOT the computer.  If the light does go off and on, wait a minute before giving up hope.  It may come back to life on its own.<br>
 	<br>
@@ -79,35 +80,37 @@
 	<a href="#top">Back to Top</a>
 
 	<section id="blue_screen"></section>
-	Blue Screen – The “Blue Screen” has appeared.<br>
+	<b>Blue Screen</b> – The “Blue Screen” has appeared.<br>
 	The dreaded “Blue Screen of Death”. There’s not a lot to be done except to reboot the machine.  If it keeps occurring, this is an indication of a major problem with the computer.<br>
 	<a href="#top">Back to Top</a>
 
 	<section id="no_sound"></section>
-	No Sound – The computer is on, but there is no sound.<br>
+	<b>No Sound</b> – The computer is on, but there is no sound.<br>
 	Is there a speaker icon next to the clock on the taskbar? (It’s in the lower right side of the screen)  If you can find it, double click the speaker icon to bring up the audio controls for the computer.  See if any of the volume controls have been muted or turned all the way down.  Uncheck any Mute boxes that are selected.<br>
 	<a href="#top">Back to Top</a>
 
 	<section id="keyboard"></section>
-	Keyboard – The computer is on, but the keyboard doesn’t work<br>
+	<b>Keyboard</b> – The computer is on, but the keyboard doesn’t work<br>
 	Swap the keyboard or try plugging the keyboard into another computer. If it doesn't work on the other computer, there is likely something wrong with the keyboard. If it does work on the other computer, there is likely something wrong on the computer or the connection to the computer.<br>
 	<a href="#top">Back to Top</a>
 
 	<section id="control_alt_delete"></section>
-	CTRL-ALT-DEL<br>
+	<b>CTRL-ALT-DEL</b><br>
 	When you press the Ctrl-Alt-Delete buttons together, you will bring up a control panel where you can select “Task Manager” and see if any of the programs are shown as “not responding”.   You may be able to shut down the offending program from there.<br>
 	If you can’t get to this screen, you’ll have to reboot.<br>
 	<a href="#top">Back to Top</a>
 
 	<section id="rebooting"></section>
-	Rebooting – Rebooting can do wonders.<br>
+	<b>Rebooting</b> – Rebooting can do wonders.<br>
 	Don’t just pull the plug!<br>
 	A simple reboot may clear up the problem. Go to the Start Menu and select Shutdown. Didn't work? It's time to try a forced reboot — with, unfortunately, no way to save your work — by pressing the keys CTRL-ALT-DEL simultaneously twice in a row.<br>
 	If that didn't work, you have no choice: you have to turn the computer off manually with the power switch. Hold the power button down (for  about 5 -10 seconds) and the computer will shut down.  Wait at least 10 seconds for the hard drive to stop spinning and then restart the machine.<br>
 	If the computer starts up, start the applications you were using when the crash occurred. Some programs, like Microsoft Word, make timed backups of your work and may bring up recovered files. If the program notifies you that there is a “recovered document” save the file under a different name and compare them to your previously saved files.<br>
 	<a href="#top">Back to Top</a>
 
-	<section id="contact"></section>Stumped? DOITT Team Help Desk is ready to assist you with computer problems.<br>
+	<section id="contact"></section>
+	<b>Stumped?</b><br>
+	DOITT Team Help Desk is ready to assist you with computer problems.<br>
 	718-403-8888 or doitthelpdesk@doitt.nyc.gov<br>
 	<a href="#top">Back to Top</a>
 
