--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,7 +11,6 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='css/semantic.min.css') }}" type="text/css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
-{{ super() }}
 <link rel="shortcut icon" href="{{ url_for('static', filename='nycgov.ico') }}" type="image/x-icon">
 <link rel="icon" href="{{ url_for('static', filename='nycgov.ico') }}" type="image/x-icon">
 {% endblock %}
@@ -57,7 +56,7 @@
                 <li><a href="{{ url_for('main.mis') }}">MIS</a></li>
                 <li><a href="{{ url_for('main.lmt') }}">LMT</a></li>
                 <li><a href="http://www.archives.nyc/">Archives</a></li>
-                <li><a href="www.nyc.gov/records">Records</a></li>
+                <li><a href="http://www.nyc.gov/html/records/html/home/home.shtml">Records</a></li>
                 <li><a href="http://nycma.lunaimaging.com/">NYCMA</a></li>
             </ul>
         </li>
@@ -74,11 +73,11 @@
         <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Social Media<span class="caret"></span></a>
             <ul class="dropdown-menu">
-                <li><a href="https://www.facebook.com/nycrecords?fref=ts/">Facebook</a></li>
-                <li><a href="https://twitter.com/nycrecords/">Twitter</a></li>
-                <li><a href="https://www.youtube.com/user/NYCDeptofRecords/">YouTube</a></li>
-                <li><a href="https://instagram.com/explore/locations/6126741/">Instagram</a></li>
-                <li><a href="http://nycrecords.tumblr.com/">Tumblr</a></li>
+                <li><a href="https://www.facebook.com/nycrecords?fref=ts/"><img src="{{ url_for('static', filename='image002.gif') }}">  Facebook</a></li>
+                <li><a href="https://twitter.com/nycrecords/"><img src="{{ url_for('static', filename='image003.png') }}">  Twitter</a></li>
+                <li><a href="https://www.youtube.com/user/NYCDeptofRecords/"><img src="{{ url_for('static', filename='image005.png') }}">  YouTube</a></li>
+                <li><a href="https://instagram.com/explore/locations/6126741/"><img src="{{ url_for('static', filename='image006.jpg') }}">  Instagram</a></li>
+                <li><a href="http://nycrecords.tumblr.com/"><img src="{{ url_for('static', filename='image004.gif') }}">  Tumblr</a></li>
             </ul>
         </li>
     </ul>
