--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -63,11 +63,12 @@
         <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Employee Info<span class="caret"></span></a>
             <ul class="dropdown-menu">
+                <li><a href="{{ url_for('main.enfg') }}">ENFG</a></li>
                 <li><a href="{{ url_for('main.eeo') }}">EEO</a></li>
-                <li><a href="http://www1.nyc.gov/site/olr/index.page/">OLR</a></li>
+                <li><a href="http://www1.nyc.gov/site/olr/index.page">OLR</a></li>
                 <li><a href="https://www.nycers.org/(S(m4z1oy554pem3oudryveam55))/index.aspx">NYCERS</a></li>
                 <li><a href="http://www.nyc.gov/html/dcas/html/employees/psbhome.shtml/">PSBs</a></li>
-                <li><a href="{{ url_for('main.agencypolicies') }}">Agency Policies</a></li>
+                <li><a href="{{ url_for('main.agencypolicies') }}">Policies</a></li>
             </ul>
         </li>
         <li class="dropdown">
@@ -76,13 +77,13 @@
                 <li><a href="https://www.facebook.com/nycrecords?fref=ts/"><img src="{{ url_for('static', filename='image002.gif') }}">  Facebook</a></li>
                 <li><a href="https://twitter.com/nycrecords/"><img src="{{ url_for('static', filename='image003.png') }}">  Twitter</a></li>
                 <li><a href="https://www.youtube.com/user/NYCDeptofRecords/"><img src="{{ url_for('static', filename='image005.png') }}">  YouTube</a></li>
-                <li><a href="https://instagram.com/explore/locations/6126741/"><img src="{{ url_for('static', filename='image006.jpg') }}">  Instagram</a></li>
+                <li><a href="https://instagram.com/explore/locations/6126741/"><img src="{{ url_for('static', filename='image006.jpg') }}" style="margin-left: -7px;">  Instagram</a></li>
                 <li><a href="http://nycrecords.tumblr.com/"><img src="{{ url_for('static', filename='image004.gif') }}">  Tumblr</a></li>
             </ul>
         </li>
     </ul>
 </div>
-{% endblock %}
+{% endblock %}cd
 
 {% block content %}
 <div class="section">
