Added comment for agencypolicies.html, moved images in static folder to new image subfolder

--- a/app/templates/agencypolicies.html
+++ b/app/templates/agencypolicies.html
@@ -10,10 +10,12 @@
 {{ super() }}
 {% endblock %}
 
-<div class="section">
 {% block page_content %}
 <div class="page-header">
     <h2>Agency Policies</h2>
 </div>
-{% endblock %}
+
+<div id="page-body">
+	<h4>There is currently nothing here, please check back later!</h4>
 </div>
+{% endblock %}
