--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -21,7 +21,7 @@
 </HEAD>
 <BODY LANG="en-US" DIR="LTR" STYLE="border: none; padding: 0in">
 <P CLASS="western" STYLE="margin-bottom: 0in; widows: 0; orphans: 0">
-<IMG SRC="{{ url_for('static', filename='city_seal.png') }}" NAME="graphics1" ALIGN=LEFT HSPACE=12 WIDTH=156 HEIGHT=135 BORDER=0>
+<IMG SRC="{{ url_for('static', filename='images/city_seal.png') }}" NAME="graphics1" ALIGN=LEFT HSPACE=12 WIDTH=156 HEIGHT=135 BORDER=0>
 <B>NEW YORK CITY<br />
 DEPARTMENT OF RECORDS AND INFORMATION SERVICES<br />
 MUNICIPAL ARCHIVES</B><br />
@@ -71,7 +71,7 @@ FOUND.</B></U></FONT></FONT></P>
 </P>
 <P CLASS="western" STYLE="margin-bottom: 0in; line-height: 100%"><FONT
         FACE="Courier New, monospace"><FONT SIZE=3><B><img src="
-        {{ url_for('static', filename='signature.bmp') }}" width="250"/>
+        {{ url_for('static', filename='images/signature.bmp') }}" width="250"/>
 </B></FONT></FONT></P>
 <P CLASS="western" STYLE="margin-bottom: 0in; line-height: 100%"><FONT FACE="Courier New, monospace"><FONT SIZE=3><B>Sylvia
 Kollar</B></FONT></FONT></P>
