--- a/app/templates/result_nosig.html
+++ b/app/templates/result_nosig.html
@@ -21,7 +21,7 @@
 </HEAD>
 <BODY LANG="en-US" DIR="LTR" STYLE="border: none; padding: 0in">
 <P CLASS="western" STYLE="margin-bottom: 0in; widows: 0; orphans: 0">
-<IMG SRC="{{ url_for('static', filename='city_seal.png') }}" NAME="graphics1" ALIGN=LEFT HSPACE=12 WIDTH=156 HEIGHT=135 BORDER=0>
+<IMG SRC="{{ url_for('static', filename='images/city_seal.png') }}" NAME="graphics1" ALIGN=LEFT HSPACE=12 WIDTH=156 HEIGHT=135 BORDER=0>
 <B>NEW YORK CITY<br />
 DEPARTMENT OF RECORDS AND INFORMATION SERVICES<br />
 MUNICIPAL ARCHIVES</B><br />
