Added missing eeo.html file, added files for agencypolicies.html

--- a/app/templates/agencypolicies.html
+++ b/app/templates/agencypolicies.html
@@ -16,6 +16,10 @@
 </div>
 
 <div id="page-body">
-	<h4>There is currently nothing here, please check back later!</h4>
+	<h4><b>Policies</b>
+	<br><br>
+	- <a href="{{ url_for('static', filename='files/Employee_Leave_Request.pdf') }}">Employee Leave Request</a><br>
+	- <a href="{{ url_for('static', filename='files/Onboarding_Policy_and_Procedure.pdf') }}">Onboarding Policy and Procedure</a><br>
+	</h4>
 </div>
 {% endblock %}
